Revert "Merge pull request #3145 from astrozzc/list_ws"
This reverts commit 265336927cdef06258a9168b8652934e98da6121, reversing
changes made to e71004210c5a55ce6beaa5f76843c4cd91bdb183.
